copy over app_data in build. TODO: fix the stylesheet error inside a jar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,3 +78,12 @@ jlink {
         //jvmArgs = ['-Djdk.gtk.version=2'] // required due to a bug in Java: https://github.com/javafxports/openjdk-jfx/issues/175
     }
 }
+
+tasks.jlink.doLast {
+    copy {
+        from("../") {
+            include "app_data/**"
+        }
+        into "./build/image/bin"
+    }
+}
