--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,51 @@ run {
 }
 
 jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'Java GUI'
         //jvmArgs = ['-Djdk.gtk.version=2'] // required due to a bug in Java: https://github.com/javafxports/openjdk-jfx/issues/175
+    }
+    jpackage {
+        installerOptions = [
+                '--description', 'Java Gui App',
+                '--vendor', 'Xiangshuai Gao',
+                '--copyright', 'Copyrigth 2015-2019 Xianshuai Gao'
+        ]
+        installerType = project.findProperty('installerType') // we will pass this from the command line (example: -PinstallerType=msi)
+        if (installerType == 'msi') {
+            imageOptions += ['--icon', '/home/xgao/storage/JavaGUI/app_data/images/Logo.png']
+            installerOptions += [
+                    '--win-per-user-install', '--win-dir-chooser',
+                    '--win-menu', '--win-shortcut'
+            ]
+        }
+        if (installerType == 'pkg') {
+            imageOptions += ['--icon', '/home/xgao/storage/JavaGUI/app_data/images/Logo.png']
+        }
+        if (installerType in ['deb', 'rpm']) {
+            imageOptions += ['--icon', '/home/xgao/storage/JavaGUI/app_data/images/Logo.png']
+            installerOptions += [
+                    '--linux-menu-group', 'Office',
+                    '--linux-shortcut'
+            ]
+        }
+        if (installerType == 'deb') {
+            installerOptions += [
+                    '--linux-deb-maintainer', 'gaoxiangshuai@gmail.com'
+            ]
+        }
+        if (installerType == 'rpm') {
+            installerOptions += [
+                    '--linux-rpm-license-type', 'MIT'
+            ]
+        }
+    }
+}
+
+jpackage {
+    doFirst {
+        project.getProperty('installerType') // throws exception if its missing
     }
 }
 
