--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.11'
     id 'java'
     id 'org.beryx.jlink' version "2.25.0"
+    id 'org.javamodularity.moduleplugin' version("1.8.10")
 }
 
 repositories {
